--- a/projects/guestbook/apps/GuestBook/templates/base.html
+++ b/projects/guestbook/apps/GuestBook/templates/base.html
@@ -1,4 +1,5 @@
-{{extend "yaml_base_layout.html"}}
+{{extend "site/layout1.html"}}
 {{block nav}}{{end}}
 {{block topnav}}{{end}}
 {{block header}}<h1><a href="{{=url_for('GuestBook.views.index')}}">Uliweb Guest Book</a></h1>{{end}}
+{{block header_custom_menu}}{{end header_custom_menu}}
